--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<title>Eric</title>
-		<meta name="description" content="Eric - CV / Resume / Personal Website Template by Hencework" />
-		<meta name="keywords" content="eric, responsive resume template, cv template, multipurpose, responsive template, vcard, html5 template, templatemonster, bootstrap, html5, creative, landing page, sass, clean, design, modern, angular js" />
-		<meta name="author" content="Hencework"/>
+		<meta name="description" content="Brian - CV / Resume / Personal Website from a Marketer" />
+		<meta name="keywords" content="Brian, digital marketing, cv marketing, marketing manager, digital marketing, imc, facebook ads, google ads" />
+		<meta name="author" content="Brian Tran"/>
 		
 		<!--Favicon-->
 		<link rel="shortcut icon" href="favicon.ico">
@@ -75,7 +75,7 @@
 							<div class="float-left name">
 								<a data-scroll href="#body">
 									<span>
-										ABE LARKEY
+										TRAN NGUYEN HOANG BAO
 									</span>
 								</a>	
 							</div>	
@@ -101,16 +101,16 @@
 						<section id="intro_content_sec"  class="col-lg-10 col-md-11 col-sm-11 center-div intro-content-wrap sec-pad">
 							<div class="person-img margin-bottom-xs"></div>
 							<h1>
-								Hey!<span id="typed"></span>
+								Hello!<span id="typed"></span>
 							</h1>
 							<h6>
 								about
 							</h6>
 							<p class="pad-bottom-35 wow fadeInUp" data-wow-duration=".6s">
-								Award winning interdisciplinary Designer & Photographer. Currently pursuing a perfect blend of style and function for a wide range of interactive graphic design. For the past 6 years I've helped global companies, organizations and start-ups reach business goals with user focused, interactive design. I enjoy bringing clarity to complex problems with a people first approach.
+								My full name is Tran Nguyen Hoang Bao. I used to work in many marketing and advertising positions at businesses, NPO and freelancer jobs. I have 5 years of experience working in marketing field. My goal in the next 5 years is to constantly learn and develop myself in the Marketing field.
 							</p>
 							<p class="wow fadeInUp" data-wow-duration=".4s">
-								I am a complete social animal. Find my work on <a class="goto-social" href="#" target="_blank">Behance</a> & <a href="#" class="goto-social" target="_blank">Dribbble</a>. Experience my photography skills on <a href="#" class="goto-social" target="_blank">Instagram</a> & <a class="goto-social" href="#" target="_blank">Flickr</a>.
+								I am a complete social animal. Find my experience on <a class="goto-social" href="https://www.linkedin.com/in/brian-dmo/" target="_blank">Linkedin</a>. Or some of my sharing on <a href="https://www.facebook.com/BrianTranDMO" class="goto-social" target="_blank">Facebook</a>.
 
 							</p>
 							<div class="per-signature margin-top-sm wow fadeInUp" data-wow-duration=".4s">
@@ -128,25 +128,25 @@
 								<div class="col-sm-3 col-xs-6 margin-bottom-sm icon-wrap wow fadeInLeft" data-wow-duration=".4s" data-wow-delay="0s">
 									<span class="icon pe-7s-graph3"></span>
 									<span class="key-fact">
-										ANALYSIS		
+										BRAND POSITIONING		
 									</span>
 								</div>
 								<div class="col-sm-3 col-xs-6 margin-bottom-sm icon-wrap wow fadeInLeft" data-wow-duration=".4s" data-wow-delay=".1s">
 									<span class="icon pe-7s-browser"></span>
 									<span class="key-fact">
-										PROGRAMMING		 
+										BUSINESS DESIGN		 
 									</span>
 								</div>
 								<div class="col-sm-3 col-xs-6 margin-bottom-sm icon-wrap wow fadeInLeft" data-wow-duration=".4s" data-wow-delay=".2s">
 									<span class=" icon pe-7s-tools"></span>
 									<span class="key-fact">
-										TESTING		
+										DIGITAL MARKETING		
 									</span>
 								</div>
 								<div class="col-sm-3 col-xs-6 margin-bottom-sm icon-wrap wow fadeInLeft" data-wow-duration=".4s" data-wow-delay=".3s">
 									<span class="icon pe-7s-note2"></span>
 									<span class="key-fact">
-										DOCUMENTATION
+										MARKETING PLAN
 									</span>
 								</div>
 							</div>	
@@ -157,28 +157,28 @@
 						
 						<!--Skills Sec-->
 						<section id="skill_sec"  class="col-lg-10 col-md-11 col-sm-11 center-div skills-wrap  sec-pad-top sec-pad-bottom-xs">
-							<h6>technical skills</h6>
-							<p class="wow fadeInUp" data-wow-duration=".4s">As a reluctant developer, I fled from a traditional path and explored my creativity, trough trying my hands on various techniques and software. Software is more than just a tool, and I try to dig deep into it. Today, I knack for critical thinking, empathy and creativity to create viable and impactful solutions using these technologies.</p>
+							<h6>marketing skills</h6>
+							<p class="wow fadeInUp" data-wow-duration=".4s">I started my first job <b>Digital Marketing Service</b> in 2014 with the <b>Data-driven method</b> to optimize multi-platform marketing tasks. In my opinion, <b>the final destination of marketing is the goal of the business</b> - like sales, market share, growth (yes, all is benefit, not cost at the end). Therefore, the consulting Business Model to have marketing harmony in the structure is considered my top responsibility as a marketing strategist..</p>
 							<div class="row margin-top-40">
 								<div class="col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">HTML 5</span>
+									<span class="progress-cat">MARKETING PLAN</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
-												<span data-width="97">
-													<strong><i>97</i>%</strong>
+												<span data-width="100">
+													<strong><i>100</i>%</strong>
 												</span>
 											</div>
 										</div>	
 									</div>
 								</div>
 								<div class="col-sm-offset-1 col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">ANGULAR JS</span>
+									<span class="progress-cat">BUSINESS DESIGN</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
-												<span data-width="98">
-													<strong><i>98</i>%</strong>
+												<span data-width="70">
+													<strong><i>70</i>%</strong>
 												</span>
 											</div>
 										</div>	
@@ -186,24 +186,24 @@
 								</div>
 								<div class="clearfix"></div>
 								<div class="col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">BOOTSTRAP</span>
+									<span class="progress-cat">DIGITAL MARKETING</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
-												<span data-width="100">
-													<strong><i>100</i>%</strong>
+												<span data-width="95">
+													<strong><i>95</i>%</strong>
 												</span>	
 											</div>
 										</div>	
 									</div>
 								</div>
 								<div class="col-sm-offset-1 col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">AJAX</span>
+									<span class="progress-cat">PROJECT MANAGEMENT</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
-												<span data-width="90">
-													<strong><i>90</i>%</strong>
+												<span data-width="80">
+													<strong><i>80</i>%</strong>
 												</span>
 											</div>
 										</div>	
@@ -211,25 +211,25 @@
 								</div>
 								<div class="clearfix"></div>
 								<div class="col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">JQUERY</span>
+									<span class="progress-cat">DATA ANALYSIS</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
-												<span data-width="86">
-													<strong><i>86</i>%</strong>
+												<span data-width="70">
+													<strong><i>70</i>%</strong>
 												</span>
 											</div>
 										</div>	
 									</div>
 								</div>
 								<div class="col-sm-offset-1 col-sm-5 margin-bottom-sm">
-									<span class="progress-cat">PHP</span>
+									<span class="progress-cat">BRAND POSITIONING</span>
 									<div class="progress-bar-graph"> 
 										<div class="progress-bar-wrap">
 											<div class="bar-wrap">
 												<div class="bar-wrap">
-													<span data-width="70">
-														<strong><i>70</i>%</strong>
+													<span data-width="90">
+														<strong><i>90</i>%</strong>
 													</span>
 												</div>	
 											</div>
