--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<title>Eric</title>
+		<title>Brian Tran Marketer</title>
 		<meta name="description" content="Brian - CV / Resume / Personal Website from a Marketer" />
 		<meta name="keywords" content="Brian, digital marketing, cv marketing, marketing manager, digital marketing, imc, facebook ads, google ads" />
 		<meta name="author" content="Brian Tran"/>
