--- a/index.html
+++ b/index.html
@@ -252,38 +252,38 @@
 									<li  class="item"   data-src="img/mock1.jpg" data-sub-html="<h6>DESIGN LAB</h6><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>" >
 										<a href="">
 										<img class="img-responsive" src="img/mock1.jpg"  alt="Image description" />
-										<span class="hover-cap">DESIGN LAB</span>
+										<span class="hover-cap">SOCIAL MEDIA MANAGEMENT</span>
 										</a>
 									</li>
 									<li class="item" data-src="http://www.youtube.com/watch?v=Pq9yPrLWMyU" data-poster="img/mock2.jpg"  data-sub-html="<h6>MODERN WORK</h6><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>">
 										<a href="">
 										<img class="img-responsive" src="img/mock2.jpg"  alt="Image description" />
-										<span class="hover-cap">MODERN WORK</span>
+										<span class="hover-cap">LOCAL SEO</span>
 										</a>
 									</li>
 									<li class="item" data-src="img/mock4.jpg" data-sub-html="<h6>UX PLATFORM</h6><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>">
 										<a href="">
 										<img class="img-responsive" src="img/mock4.jpg"  alt="Image description" />
-										<span class="hover-cap">UX PLATFORM</span>
+										<span class="hover-cap">CAMPAIGN MANAGEMENT</span>
 										</a>
 									</li>
 									<li class="item" data-src="http://vimeo.com/1084537" data-poster="img/mock3.jpg" data-sub-html="<h6>MONOBRANDING</h6><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>">
 										<a href="">
 										<img class="img-responsive" src="img/mock3.jpg"  alt="Image description" />
-										<span class="hover-cap">MONOBRANDING</span>
+										<span class="hover-cap">MARKETING PLAN</span>
 										</a>
 									</li>
 									
 									<li class="item" data-src="img/mock5.jpg" data-sub-html="<h6>FALL/WINTER</h6><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>">
 										<a href="">
 										<img class="img-responsive" src="img/mock5.jpg"  alt="Image description" />	
-										<span class="hover-cap">FALL/WINTER</span>
+										<span class="hover-cap">BRAND POSITIONING</span>
 										</a>
 									</li>
 									<li class="item" data-html="#video1" data-poster="img/mock6.jpg" data-sub-html="<h6>FANTASTIC MAN</h6><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>">
 										<a href="">
 										<img class="img-responsive" src="img/mock6.jpg"  alt="Image description" />
-										<span class="hover-cap">FANTASTIC MAN</span>
+										<span class="hover-cap">CHATBOT AUTOMATION</span>
 										</a>
 									</li>
 									
