--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 									<video class="lg-video-object lg-html5 video-js vjs-default-skin" controls preload="none">
 										<source src="videos/video1.mp4" type="video/webm">
 										<source src="videos/video1.webm" type="video/webm">
-										 Your browser does not support HTML5 video.
+										 Your browser does not support HTML5 video. Please using Chrome for the best experience.
 									</video>
 								</div>
 							</div>
