--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 						<section id="edu_sec"  class="col-lg-10 col-md-11 col-sm-11 center-div education-wrap  sec-pad">
 							<h6>education</h6>
 							<p class="wow fadeInUp" data-wow-duration=".4s">
-								I spent 3 years learning Web Design & Development, got my Bachelor degree in Communication and Applied Art and started working independently. I think one should never stop learning and go through a process of acquiring knowledge.
+								I spent 3 years learning Web Design nnn & Development, got my Bachelor degree in Communication and Applied Art and started working independently. I think one should never stop learning and go through a process of acquiring knowledge.
 							</p>
 							<div class="qualfication-wrap">
 								<div class="qualfication first-row wow fadeInUp" data-wow-duration=".4s">
