--- a/index.html
+++ b/index.html
@@ -275,16 +275,16 @@ document.onclick=reEnable
 						
 							<div id="portfolio-wrap" class="padding-sec-lg">
             					<ul id="portfolio" class="auto-construct  project-gallery" data-col="2">
-									<li  class="item"   data-src="img/mock1.jpg" data-sub-html="<h6>DESIGN LAB</h6><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>" >
+									<li  class="item"   data-src="img/mock1.jpg" data-sub-html="<h6>SOCIAL MEDIA MANAGEMENT</h6><p>Over 70% of marketers still use content marketing, and 80% said it was effective tool. I agree with this view, however I improve it by using Social Listening Tools in real time report. I also use Social Media as a channel to transmit the brand's Big Idea to support communication.</p>" >
 										<a href="">
 										<img class="img-responsive" src="img/mock1.jpg"  alt="Image description" />
 										<span class="hover-cap">SOCIAL MEDIA MANAGEMENT</span>
 										</a>
 									</li>
-									<li class="item" data-src="http://www.youtube.com/watch?v=Pq9yPrLWMyU" data-poster="img/mock2.jpg"  data-sub-html="<h6>MODERN WORK</h6><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>">
+									<li class="item" data-src="img/mock2.jpg"  data-sub-html="<h6>MULTI-CHANNELS FOR LOCALS COMPANY</h6><p>Using Search Engine is the focus to convert into leads. Get Social Media as a media channel to attract more customers. Combined with other factors (PR, booking, influencers, ...) to create the foundation for your brand. Efficiency - Convert - Measure is the key factor in using multichannel..</p>">
 										<a href="">
 										<img class="img-responsive" src="img/mock2.jpg"  alt="Image description" />
-										<span class="hover-cap">LOCAL SEO</span>
+										<span class="hover-cap">MULTI-CHANNELS PLATFORM</span>
 										</a>
 									</li>
 									<li class="item" data-src="img/mock4.jpg" data-sub-html="<h6>UX PLATFORM</h6><p>Classic view from Rigwood Jetty on Coniston Water an old archive shot similar to an old post but a little later on.</p>">
