--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 	</head>
 	
 	<body id="body" data-ng-app="contactApp">
-	<!--Anti Right Click-->
-	<body onselectstart="return false" oncontextmenu="return false">
+	<!--Anti Right Click
+	<body onselectstart="return false" oncontextmenu="return false">-->
 		<!--Fixed Bg Image-->
 		<div class="fixed-bg"></div>
 		<div class="fixed-bg-overlay"></div>
