--- a/index.html
+++ b/index.html
@@ -516,7 +516,8 @@
 							<div data-ng-controller="ContactController" class="align-center wow fadeInUp" data-wow-duration=".4s">
 								<h3>Hello <span  data-ng-bind="formData.inputName||'friend'"></span>, I'd love to hear from you.</h3>
 								<div>
-									<form data-ng-submit="submit(contactform, $event)"  name="contactform"  method="post" class="row form-horizontal" role="form">
+									<form action="https://formspree.io/xyyywrjn"
+											method="POST"class="row form-horizontal" role="form">
 										<div class="form-group input--hoshi col-sm-6" data-ng-class="{ 'has-error': contactform.inputName.$invalid && submitted }">
 											<div class="input-wrap">
 												<input autocomplete="off" data-ng-model="formData.inputName" type="text" class="form-control input__field input input__field--hoshi" id="inputName" name="inputName" placeholder="Name" required>
