--- a/index.html
+++ b/index.html
@@ -43,12 +43,14 @@
 				document.onclick=reEnable
 				}
 				</script>
+		<!--/Anticopy-->		
 
 	</head>
 	
 	<body id="body" data-ng-app="contactApp">
-	<!--Anti Right Click
-	<body onselectstart="return false" oncontextmenu="return false">-->
+	<!--Anti Right Click-->
+	<body onselectstart="return false" oncontextmenu="return false">
+	<!--/Anti Right Click-->
 		<!--Fixed Bg Image-->
 		<div class="fixed-bg"></div>
 		<div class="fixed-bg-overlay"></div>
@@ -599,7 +601,7 @@
 										</a>
 									</div>
 									<div class="copywrite-wrap text-right float-right">
-										<p class="copywrite">Copyright by <b>Brian Tran &copy; 2019.</b> UI/UX Designed by <b>Hencework.</b></p>
+										<p class="copywrite">Copyright by <b>Brian Tran &copy; 2019.</b></p>
 									</div>
 								</div>	
 							</div>	
