--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
 							</div>
 							
 							<div class="email-direct">
-								<p class="wow fadeInRight" data-wow-duration=".4s">Or simply click to email me at <a href="mailto:contact@hoangbao.org">contact@hoangbao.org</a></p>
+								<p class="wow fadeInRight" data-wow-duration=".4s">Or simply click to chat with me via <a href="https://www.messenger.com/t/BrianTranDMO">Messenger</a></p>
 							</div>
 						</section>
 						<!--Contact Sec-->
