--- a/index.html
+++ b/index.html
@@ -278,27 +278,27 @@
 						
 							<div id="portfolio-wrap" class="padding-sec-lg">
             					<ul id="portfolio" class="auto-construct  project-gallery" data-col="2">
-									<li  class="item" data-src="img/mock1.webp" class="lazyload" data-sub-html="<h6>SOCIAL MEDIA MANAGEMENT</h6><p>Over 70% of marketers still use content marketing, and 80% said it was effective tool. I agree with this view, however I improve it by using Social Listening in real time report. I also use Social Media as a channel to transmit the brand's Big Idea to support communication plan.</p>" >
+									<li  class="item" data-src="img/mock1.webp" data-sub-html="<h6>SOCIAL MEDIA MANAGEMENT</h6><p>Over 70% of marketers still use content marketing, and 80% said it was effective tool. I agree with this view, however I improve it by using Social Listening in real time report. I also use Social Media as a channel to transmit the brand's Big Idea to support communication plan.</p>" >
 										<a href="">
-										<img class="img-responsive" src="img/mock1.webp" style="filter: grayscale(1) invert(1);" alt="Image description" />
+										<img class="img-responsive" src="img/mock1.webp" class="lazyload" style="filter: grayscale(1) invert(1);" alt="Image description" />
 										<span class="hover-cap">SOCIAL MEDIA MANAGEMENT</span>
 										</a>
 									</li>
-									<li class="item" data-src="img/mock2.webp" class="lazyload" data-sub-html="<h6>MULTI-CHANNELS FOR LOCALS COMPANY</h6><p>Using Search Engine is the focus to convert into leads. Get Social Media as a media channel to attract more customers. Combined with other factors (PR, booking, influencers, ...) to create the foundation for your brand. Efficiency - Convert - Measure is the key factor in using multichannel..</p>">
+									<li class="item" data-src="img/mock2.webp" data-sub-html="<h6>MULTI-CHANNELS FOR LOCALS COMPANY</h6><p>Using Search Engine is the focus to convert into leads. Get Social Media as a media channel to attract more customers. Combined with other factors (PR, booking, influencers, ...) to create the foundation for your brand. Efficiency - Convert - Measure is the key factor in using multichannel..</p>">
 										<a href="">
-										<img class="img-responsive" src="img/mock2.webp" style="filter: grayscale(1) invert(1);" alt="Image description" />
+										<img class="img-responsive" src="img/mock2.webp" class="lazyload" style="filter: grayscale(1) invert(1);" alt="Image description" />
 										<span class="hover-cap">MULTI-CHANNELS SETUP</span>
 										</a>
 									</li>
-									<li class="item" data-src="img/mock3.webp" class="lazyload" data-sub-html="<h6>CAMPAIGN MANAGEMENT IS AN ART</h6><p>The world moves from advertising to creative advertising. Customers switch from watching Tuoitre newspaper to watching Den Vau's music on Youtube and buying Tiki shortly after. All campaigns become an Art. I use Integrated Marketing Communications (IMC) with an in-depth customer insight mix with Performance Measurement KPIs in real-time. All for guaranteed: Optimal cost, One key message - Multi channels, measurable efficiency..</p>">
+									<li class="item" data-src="img/mock3.webp" data-sub-html="<h6>CAMPAIGN MANAGEMENT IS AN ART</h6><p>The world moves from advertising to creative advertising. Customers switch from watching Tuoitre newspaper to watching Den Vau's music on Youtube and buying Tiki shortly after. All campaigns become an Art. I use Integrated Marketing Communications (IMC) with an in-depth customer insight mix with Performance Measurement KPIs in real-time. All for guaranteed: Optimal cost, One key message - Multi channels, measurable efficiency..</p>">
 										<a href="">
-										<img class="img-responsive" src="img/mock3.webp" style="filter: grayscale(0.7) invert(1);" alt="Image description" />
+										<img class="img-responsive" src="img/mock3.webp" class="lazyload" style="filter: grayscale(0.7) invert(1);" alt="Image description" />
 										<span class="hover-cap">CAMPAIGN MANAGEMENT</span>
 										</a>
 									</li>
-									<li class="item" data-src="img/mock4.webp" class="lazyload" data-sub-html="<h6>WHERE MARKETING ENDS, BRANDING BEGINS - Neil Patel</h6><p>Branding and Marketing is a Chicken and egg story. Marketing for a Brand is a process of Understanding -> Positioning -> Implementing -> Optimizing but Insightful. I started everything from Business to Marketing and finally Branding - which means that logically the KPIs also follow this route. So, is Branding responsible for the sales? 100% is yes!</p>">
+									<li class="item" data-src="img/mock4.webp" data-sub-html="<h6>WHERE MARKETING ENDS, BRANDING BEGINS - Neil Patel</h6><p>Branding and Marketing is a Chicken and egg story. Marketing for a Brand is a process of Understanding -> Positioning -> Implementing -> Optimizing but Insightful. I started everything from Business to Marketing and finally Branding - which means that logically the KPIs also follow this route. So, is Branding responsible for the sales? 100% is yes!</p>">
 										<a href="">
-										<img class="img-responsive" src="img/mock4.webp" style="filter: grayscale(1) invert(1);" alt="Image description" />
+										<img class="img-responsive" src="img/mock4.webp" class="lazyload" style="filter: grayscale(1) invert(1);" alt="Image description" />
 										<span class="hover-cap">MARKETING TO BRANDING</span>
 										</a>
 									</li>
