--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 		<meta name="description" content="Brian Tran's CV / Resume for a Marketing - Branding position!" />
 		<meta name="keywords" content="Brian, digital marketing, cv marketing, marketing manager, digital marketing, imc, facebook ads, google ads" />
 		<meta name="author" content="Brian Tran"/>
+		<meta property=”og:title” content=”Brian Tran |A Marketer's story”/>
+		<meta property="og:type" content="website">
+		<meta property=”og:url” content=”https://cv.hoangbao.org/”/>
+		<meta property=”og:image” content=”https://cv.hoangbao.org/img/signature.webp”/>
+		<meta property=”og:site_name” content=”Brian Tran's CV”/>
+		<meta property=”og:description” content=”Here is my CV / Resume for a Marketing - Branding position!”/>
 		
 		<!--Favicon-->
 		<link rel="shortcut icon" href="favicon.ico">
