--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 		<meta name="author" content="Brian Tran"/>
 		
 		<!--Open Graph-->
-		<meta property=”og:title” content=”Brian Tran | Marketing story”/>
+		<meta property="og:title” content=”Brian Tran | Marketing story"/>
 		<meta property="og:type" content="website"/>
-		<meta property=”og:url” content=”https://cv.hoangbao.org/”/>
-		<meta property=”og:image” content=”https://cv.hoangbao.org/img/signature.webp”/>
-		<meta property=”og:site_name” content=”Brian Tran's CV”/>
-		<meta property=”og:description” content=”Here is my CV / Resume for a Marketing - Branding position!”/>
+		<meta property="og:url" content="https://cv.hoangbao.org/"/>
+		<meta property="og:image" content="https://cv.hoangbao.org/img/signature.webp"/>
+		<meta property="og:site_name" content="Brian Tran's CV"/>
+		<meta property="og:description" content="Here is my CV / Resume for a Marketing - Branding position!"/>
 		<!--/Opne Graph-->
 		
 		<!--Favicon-->
