--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta property="og:image" content="https://cv.hoangbao.org/img/signature.webp"/>
 		<meta property="og:site_name" content="Brian Tran's CV"/>
 		<meta property="og:description" content="Here is my CV / Resume for a Marketing - Branding position!"/>
-		<!--/Opne Graph-->
+		<!--/Open Graph-->
 		
 		<!--Favicon-->
 		<link rel="shortcut icon" href="favicon.ico">
