--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<meta name="author" content="Brian Tran"/>
 		
 		<!--Open Graph-->
-		<meta property="og:title" content="Brian Tran | Marketing story"/>
+		<meta property="og:title" content="Brian Tran | Marketer"/>
 		<meta property="og:type" content="website"/>
 		<meta property="og:url" content="https://cv.hoangbao.org/"/>
-		<meta property="og:image" content="https://cv.hoangbao.org/img/mainbg.webp"/>
+		<meta property="og:image" content="https://cv.hoangbao.org/img/signature.webp"/>
 		<meta property="og:site_name" content="Brian Tran Resume"/>
 		<meta property="og:description" content="Here is my CV / Resume for a Marketing - Branding position!"/>
 		<!--/Open Graph-->
