--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<title>Brian Tran | Marketing Business Consultant</title>
+		<title>Brian Tran | Business Marketing Consultant</title>
 		<meta name="description" content="Brian Tran's CV / Resume for a Marketing - Branding position!" />
 		<meta name="keywords" content="Brian, digital marketing, cv marketing, marketing manager, digital marketing, imc, facebook ads, google ads" />
 		<meta name="author" content="Brian Tran"/>
 		
 		<!--Open Graph-->
-		<meta property="og:title" content="Brian Tran | Marketing Business Consultant"/>
+		<meta property="og:title" content="Brian Tran | Business Marketing Consultant"/>
 		<meta property="og:type" content="website"/>
 		<meta property="og:url" content="https://cv.hoangbao.org/"/>
-		<meta property="og:image" content="https://cv.hoangbao.org/img/signature.webp"/>
+		<meta property="og:image" content="https://cv.hoangbao.org/img/opg.jpg"/>
 		<meta property="og:site_name" content="Brian Tran Resume"/>
 		<meta property="og:description" content="Here is my CV / Resume for a Marketing - Branding position!"/>
 		<!--/Open Graph-->
