--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta property="og:title" content="Brian Tran | Business Marketing Consultant"/>
 		<meta property="og:type" content="website"/>
 		<meta property="og:url" content="https://cv.hoangbao.org/"/>
-		<meta property="og:image" content="https://cv.hoangbao.org/img/opg.jpg"/>
+		<meta property="og:image" content="https://cv.hoangbao.org/img/ogp.webp"/>
 		<meta property="og:site_name" content="Brian Tran Resume"/>
 		<meta property="og:description" content="Here is my CV / Resume for a Marketing - Branding position!"/>
 		<!--/Open Graph-->
