--- a/index.html
+++ b/index.html
@@ -559,7 +559,8 @@
 							</div>
 							
 							<div class="email-direct">
-								<p class="wow fadeInRight" data-wow-duration=".4s">Or simply click to chat with me via <a href="https://www.messenger.com/t/BrianTranDMO">Messenger</a></p>
+								<p class="wow fadeInRight" data-wow-duration=".4s">
+								<a href="https://www.messenger.com/t/BrianTranDMO">Or simply click <u>here</u> to chat with me via Messenger</a></p>
 							</div>
 						</section>
 						<!--Contact Sec-->
