--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
 							</p>
 							<div class="per-signature margin-top-sm wow fadeInUp" data-wow-duration=".4s">
-								<img class="img-responsive" src="img/signature.webp" alt="signature"/>
+								<img class="img-responsive lazyload" src-data="img/signature.webp" alt="signature"/>
 							</div>
 						</section>
 						<!--/Introduction Sec-->						
