--- a/index.html
+++ b/index.html
@@ -56,16 +56,21 @@
 
 	</head>
 	
-	<body id="body" data-ng-app="contactApp">
+	<body class="preloading" id="body" data-ng-app="contactApp">
+	<!--Preloader-->
+	<div id="preload" class="preload-container text-center">
+        <span class="glyphicon glyphicon-repeat preload-icon rotating"></span>
+    </div>
+	<!--/Preloader-->
 	<!--Anti Right Click-->
-	<body onselectstart="return false" oncontextmenu="return false">
-	<!--/Anti Right Click-->
-		<!--Fixed Bg Image-->
+	<div onselectstart="return false" oncontextmenu="return false">
+	
+	<!--Fixed Bg Image-->
 		<div class="fixed-bg"></div>
 		<div class="fixed-bg-overlay"></div>
-		<!--/Fixed Bg Image-->
+	<!--/Fixed Bg Image-->
 				
-		<!--Preloader-->
+		<!--Preloader--
 		<div id="pre_load" class="preloader-it">
 			<div id="la_anim" class="la-anim-1"></div>
 		</div>
@@ -627,7 +632,7 @@
 		<!-- Scripts -->
 		<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 		<script src="js/angular.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 		<script src="js/modernizr.custom.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/controllers.js"></script>
@@ -644,5 +649,11 @@
 		<script src="js/wow.min.js"></script>
 		<script src="js/init.js"></script>
 		<script src="js/lazysizes.min.js" async></script>
+		<script type="text/javascript">
+		$(window).load(function() {
+        $('body').removeClass('preloading');
+        $('#preload').delay(1000).fadeOut('fast');
+		});
+		</script>
 	</body>
 </html>
