--- a/index.html
+++ b/index.html
@@ -57,11 +57,13 @@
 	</head>
 	
 	<body class="preloading" id="body" data-ng-app="contactApp">
+	
 	<!--Preloader-->
 	<div id="preload" class="preload-container text-center">
-        <span class="glyphicon glyphicon-repeat preload-icon rotating"></span>
+        <span class="fa fa-refresh fa-spin preload-icon"></span>
     </div>
 	<!--/Preloader-->
+	
 	<!--Anti Right Click-->
 	<div onselectstart="return false" oncontextmenu="return false">
 	
