--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 							</div>	
 							
 							<div class="float-right social-download-wrap">
-								<a href="http://go.hoangbao.org/CV" class="btn btn-default float-left">
+								<a href="https://pdf-ace.com/pdfme?cache=0&print_media=1" class="btn btn-default float-left">
 									<span class="mask"></span>
 									<span class="btn-label">
 										<b>download resume</b>
