Revert "disable anti"
This reverts commit 00b9bfbbe4dac56ae9de570c7260fc7288ec50a3.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<!--CSS-->
 		<link rel="stylesheet" type="text/css" href="css/style.css" />
 		
-		<!--Anticopy--
+		<!--Anticopy-->
 		<style>
 				body{
 					-webkit-touch-callout: none;
@@ -64,7 +64,7 @@
     </div>
 	<!--/Preloader-->
 	
-	<!--Anti Right Click --
+	<!--Anti Right Click-->
 	<div onselectstart="return false" oncontextmenu="return false">
 	
 	<!--Fixed Bg Image-->
