--- a/index.html
+++ b/index.html
@@ -632,9 +632,9 @@
 		<!-- /Container -->
 				
 		<!-- Scripts -->
-		<script type="text/javascript" src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+		<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 		<script src="js/angular.min.js"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+		<script src="js/bootstrap.min.js"></script>
 		<script src="js/modernizr.custom.js"></script>
 		<script src="js/app.js"></script>
 		<script src="js/controllers.js"></script>
