--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
 								<li><a data-scroll href="#body"></a><span>about</span></li>
 								<li><a data-scroll href="#services_sec"></a><span>services</span></li>
 								<li><a data-scroll href="#skill_sec"></a><span>skills</span></li>
-								<li><a data-scroll href="#work_sec"></a><span>work</span></li>
-								<li><a data-scroll href="#edu_sec"></a><span>background</span></li>
 								<li><a data-scroll href="#exp_sec"></a><span>experience</span></li>
+								<!--<li><a data-scroll href="#work_sec"></a><span>work</span></li>-->
+								<li><a data-scroll href="#edu_sec"></a><span>background</span></li>
 								<li><a data-scroll href="#client_sec"></a><span>clients</span></li>
 								<!--<li><a data-scroll href="#achivement_sec"></a><span>achivements</span></li>-->
 								<li><a data-scroll href="#contact_sec"></a><span>contact</span></li>
